feat: swagger 返回值带有interface类型的解决办法
